master

1.3.0
  - Add function to extract all packets from a pcap file as vector of maps.
  - Fix doc strings.
  - Refactor namespace structure.

1.1.0
  - Add functionality for processing pcap data from files.

1.0.7
  - Add type to parsed map.

1.0.6
  - Increment jnetpcap version to reflect that we use a custom patched
  version.
    This version fixes various issues with respect to IPv6 address formating.
  - Add the formating patches under jnetpcap.

1.0.5
  - IPv6 formating: print ":0:" instead of ":0000:" for
    sequences of zeros that had could not be shortened as "::".

1.0.4
  - Fix formating of IPv6 addresses in jnetpcap.
    This fix solves issues with respect to intermediate sequences of zeros.

1.0.3
  - Fix formating of IPv6 addresses in jnetpcap.
    This fix should be submitted upstream.

1.0.2
  - Add missing native libs for Linux i386

1.0.1
  - Be more robust in case of exceptions.
  - Refactor function to extract bytes as vector.

1.0.0
  - New release as clj-net-pcap.