@@ -2,6 +2,7 @@ master
 
 1.3.0
   - Add function to extract all packets from a pcap file as vector of maps.
+  - Add adapter class for using clj-net-pcap from Java.
   - Fix doc strings.
   - Refactor namespace structure.
 
